SE音声mux処理の修正：pydubで生成したSE入りwavを必ず動画にmuxするように修正。requirements.txtにwhisperx, silero-vad, webrtcvad, pydub追加。

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ openai==0.28
 PySide6
 # ffmpeg-pythonなど必要に応じて追記
 ffmpeg-python
+
+# WhisperX, Silero VAD, webrtcvad, pydub追加
+whisperx
+silero-vad
+webrtcvad
+pydub
