--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-__pycache__/
 *.pyc
 *.pyo
 *.pyd
@@ -17,3 +16,7 @@ dist/
 # Python cache directories
 __pycache__/
 **/__pycache__/
+
+# Test cache
+.pytest_cache/
+**/.pytest_cache/
